# zametka-api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.access_service.ini  alembic.ini  alembic.notes.ini  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
backend/: Dockerfile  alembic.ini  main.py  requirements.txt
backend/adapters/repository/: __init__.py  abstract.py  auth.py  script.py  uow.py
backend/adapters/v1/: auth.py  script.py
backend/adapters/v1/auth/: jwtops.py  mailer.py
backend/adapters/v1/exceptions/: auth.py
backend/application/v1/: auth.py
backend/application/v1/auth/: dto.py  interfaces.py  logic.py  responses.py  use_case.py
backend/core/: dependencies.py  settings.py
backend/core/db/: __init__.py  database.py  provider.py
backend/domain/db/: __init__.py  database.py  provider.py
backend/domain/v1/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 2569e8b3c535_script_table_2.py  5b725489fde2_user_email_unique.py  5e903ae1bd9f_script_table_6_test.py  612519636ad9_script_table_4_test.py  6a2ab4ef3b89_script_table_7_test.py  cc550189aaeb_user_increase_password_field_length_30_.py  ff2086bf7dbe_script_table_5_test.py
backend/presentation/v1/: __init__.py
backend/repository/: __init__.py  auth.py
backend/v1/: __init__.py
backend/v1/endpoints/: hello.py
frontend/yourscript/: .gitignore  package-lock.json  package.json
frontend/yourscript/src/: main.jsx  router.jsx
src/yourscript/: alembic.ini
src/yourscript/infrastructure/: config_loader.py
src/yourscript/main/: ioc.py  web.py
src/yourscript/presentation/: __init__.py  interactor_factory.py
src/zametka/infrastructure/: config_loader.py
src/zametka/main/: cli.py  ioc.py  web.py
src/zametka/presentation/: __init__.py  interactor_factory.py
tests/mocks/access_service/: event_emitter.py  id_provider.py  token_sender.py  uow.py  user_identity_repository.py
yourscript/: main.py
yourscript/application/auth/: email_verification.py  logic.py  refresh_token.py  sign_in.py  sign_up.py
yourscript/application/common/: adapters.py  interactor.py  repository.py  uow.py
yourscript/application/script/: dto.py  script_interactor.py
yourscript/domain/entities/: refresh_token.py  script.py  user.py
yourscript/domain/services/: refresh_token_service.py  script_service.py  user_service.py
yourscript/domain/value_objects/: token.py
yourscript/infrastructure/: config_loader.py  stubs.py
yourscript/infrastructure/db/: __init__.py  main.py  provider.py  uow.py
yourscript/main/: ioc.py  web.py
yourscript/presentation/: __init__.py  interactor_factory.py
yourscript/presentation/endpoints/: auth.py  script.py
yourscript/presentation/schemas/: auth.py
yourscript/presentation/v1/: __init__.py
(+330 files in other folders)
