[build-system]
requires = [
    'setuptools==68.1.2',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'zametka'
version = '1.0.0'
description = 'Zametka note app API'
readme = 'README.md'
requires-python = '>=3.10.8'
dependencies = [
    'alembic==1.11.1',
    'asyncpg==0.29.0',
    'fastapi==0.95.2',
    'fastapi-another-jwt-auth==0.1.8',
    'mypy==1.3.0',
    'python-dotenv==1.0.0',
    'SQLAlchemy==2.0.22',
    'uvicorn==0.22.0',
    'email-validator==1.3.1',
    'passlib==1.7.4',
    'fastapi-mail==1.2.8',
    'Jinja2~=3.1.2',
    'PyJWT~=2.8.0',
    'pydantic~=1.10.7',
    'starlette~=0.27.0',
    'aiohttp==3.9.1',
    'Brotli==1.1.0',
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.isort]
profile = "black"

[[project.authors]]
name = 'lubaskinc0de'
email = 'lubaskincorporation@gmail.com'