[build-system]
requires = [
    'setuptools==68.1.2',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'zametka'
version = '1.0.0'
description = 'Zametka note app API'
readme = 'README.md'
requires-python = '>=3.10.8'
dependencies = [
    'alembic==1.11.1',
    'asyncpg==0.29.0',
    'fastapi==0.95.2',
    'fastapi-another-jwt-auth==0.1.8',
    'mypy==1.3.0',
    'SQLAlchemy==2.0.22',
    'uvicorn==0.22.0',
    'email-validator==1.3.1',
    'passlib==1.7.4',
    'fastapi-mail==1.2.8',
    'Jinja2~=3.1.2',
    'PyJWT~=2.8.0',
    'pydantic~=1.10.7',
    'starlette~=0.27.0',
    'aiohttp==3.9.1',
    'Brotli==1.1.0',
    'adaptix==3.0.0b1',
    'aio-pika==9.3.1',
    'pytest==7.3.1',
    'pytest-asyncio==0.20.3',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
zametka = "zametka.main.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.isort]
profile = "black"

[[project.authors]]
name = 'lubaskinc0de'
email = 'lubaskincorporation@gmail.com'